# Bloop

./: .gitignore  Cargo.toml  README.md  build.rs  package.json  tauri.conf.json  vite.config.ts
.github/: FUNDING.yml
.github/workflows/: main.yml
config/: default.toml
icons/: icon.icns
keys/: bloop.key.pub
src/: main.rs  scripts.rs  settings.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/app/: index.html
src-tauri/app/js/: app.ts
src-tauri/app/js/components/: bloopMode.ts  editor.ts  editorObj.ts  spotlight.ts  titlebar.ts
src-tauri/app/stylesheets/: main.scss
src-tauri/app/stylesheets/components/: _editor.scss  _icons.scss  _titlebar.scss
src-tauri/config/: default.toml
src-tauri/scripts/: owoifier.js
src-tauri/src/: main.rs  scripts.rs  settings.rs
src-tauri/src/icons/: icon.icns
src-tauri/src/web/js/: app.ts
src-tauri/src/web/js/components/: bloopMode.ts  editor.ts  settings.ts  spotlight.ts
src/template/: app.js  index.html  style.css
src/web/: app.js  app.ts  icons.css  index.html  style.css
src/web/code-mirror/: codemirror.css  mode.js
src/web/components/: action.ts  editor.ts  editorObj.ts  spotlight.ts  titlebar.ts
src/web/components/code-mirror/: mode.js
src/web/fonts/: icons.eot
src/web/js/: app.ts
src/web/js/components/: bloopMode.ts  editor.ts  editorObj.ts  settings.ts  spotlight.ts
src/web/stylesheets/: main.scss
src/web/stylesheets/base/: _base.scss  _helpers.scss  _vars.scss
src/web/stylesheets/components/: _editor.scss  _spotlight.scss  _titlebar.scss  _window.scss  codemirror.css
