[package]
name = "bloop"
version = "0.1.0"
authors = ["Blaine <rishi1998@gmail.com>"]
edition = "2018"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-beta.0" }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[dependencies]
tauri = { version = "1.0.0-beta.1" }
rust-embed = "5.9.0"
serde_json = "1.0.56"
serde = { version = "1.0.114", features = ["derive"] }
glob = "0.3.0"
directories = "3.0.1"
tinyfiledialogs = "3.3.10"
anyhow = "1.0.40"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.11"

[package.metadata.winres]
ProductName = "Bloop"
FileDescription = "A light weight scratch pad for developers"
OriginalFilename = "Bloop.EXE"
ProductVersion = "0.1.0"
LegalCopyright = "© 2020 Blaine"
