[package]
name = "bloop"
version = "0.4.2"
authors = ["Blaine <rishi1998@gmail.com>"]
edition = "2018"
build = "build.rs"
description = "A hackable scratchpad for developers"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.0-beta.1" }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[dependencies]
tauri = { version = "1.0.0-beta.2", features = ["window-all", "fs-path", "shell-open"] }
serde_json = "1.0.56"
serde = { version = "1.0.114", features = ["derive"] }
glob = "0.3.0"
once_cell = "1.7.2"
config = "0.11.0"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"
