[package]
name = "bloop"
version = "0.4.8"
authors = [ "Blaine <rishi1998@gmail.com>" ]
edition = "2018"
build = "build.rs"
description = "A hackable scratchpad for developers"

[build-dependencies]
tauri-build = { version = "1.0.0-beta.4" }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[dependencies]
serde_json = "1.0.56"
serde = { version = "1.0.114", features = [ "derive" ] }
glob = "0.3.0"
once_cell = "1.7.2"
config = "0.11.0"

[dependencies.tauri]
version = "1.0.0-beta.8"
features = ["fs-read-dir", "fs-read-text-file", "fs-write-file", "path-all", "shell-open", "window-all"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"
